--- a/uni.scss
+++ b/uni.scss
@@ -4,4 +4,32 @@
  * uView自定义的css类名和scss变量，均以"u-"开头，不会造成冲突，请放心使用 
  */
 @import 'uview-ui/theme.scss';
-
+.grid-text {
+	margin-top: 10rpx;
+}
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+.pad28 {
+	padding: 14rpx 28rpx;
+	background-color: #fff;
+}
+.mt10 {
+	margin-top: 20rpx;
+}
+.h3 {
+	color: #333;
+	font-size: 28rpx;
+	line-height: 1.5;
+	font-weight: normal;
+}
+.h4 {
+	color: #666;
+	font-size: 24rpx;
+	line-height: 1.5;
+	font-weight: normal;
+}
+.an {
+	transition: all 0.3s ease-out 0s;
+}
